# MySudoku

./: .gitignore  CMakeLists.txt  Doxyfile  MySudoku.nsi  README.md  build.bat  launch.bat  package_debug.bat  package_release.bat  updateDocumentation.bat  winEnv.bat
Code/: CMakeLists.txt
Code/global_include/: globals.h
Code/include/: MySudokuViewer.h  SudokuCell.h  SudokuDelegate.h  SudokuModel.h  SudokuView.h  globals.h
Code/interface/: CMakeLists.txt
Code/interface/include/: MySudokuViewer.h  SudokuDelegate.h  SudokuModel.h
Code/interface/src/: MySudokuViewer.cpp  SudokuDelegate.cpp  SudokuModel.cpp  SudokuView.cpp
Code/interface/ui/: InitDialog.ui  MainWindow.ui
Code/solver/: CMakeLists.txt
Code/solver/Tests/: CMakeLists.txt
Code/solver/Tests/data/: expert.csv  expert_solution.csv  hard.csv  hard_ko_square.csv
Code/solver/Tests/src/: tests.cpp
Code/solver/include/: Filter.h  Solver.h  Sudoku.h  SudokuCell.h  core.h  solver.h
Code/solver/src/: Solver.cpp  Sudoku.cpp  SudokuCell.cpp  core.cpp  solver.cpp
Code/src/: MySudokuViewer.cpp  SudokuCell.cpp  SudokuDelegate.cpp  SudokuModel.cpp  SudokuView.cpp  main.cpp
Code/ui/: MainWindow.ui
Tests/: CMakeLists.txt
Tests/data/: easy.csv  hard_ko_col.csv  hard_ko_nb_value.csv  hard_ko_row.csv  hard_solution.csv
Tests/src/: tests.cpp
